[project]
name = "cfp_crawler"
version = "0.1.0"
description = "Gather relevant conferences on wikicfp.com"
authors = [
    { name = "Olivier D'Ancona", email = "olivier.dancona@master.hes-so.ch" }
]
dependencies = [
    "pandas>=2.2.3",
    "dotenv>=0.9.9",
    "beautifulsoup4>=4.13.3",
    "langchain-openai>=0.3.7",
    "langchain>=0.3.19",
    "colorlog>=6.9.0",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cfp"]
